--- a/css/Style.css
+++ b/css/Style.css
@@ -3,16 +3,24 @@ header{
     top: 0;
     width: 100%;
     display: block;
-    height: 50px;
+    height: 80px;
     background-color: #ffffff;
-    
+    border-bottom: 1px solid black;
 }
 body{
     margin: 0px;
     font-family: sans-serif;
 }
-h1{
-    margin-top: 0;
+.header-content{
+    width: 80%;
+    margin: auto;
+    height: 40px;
+    padding: 20px 0 20px 0;
+}
+.header-title{
+    display: inline-block;
+    margin:0;
+    font-size: 30px;
     color: #763a96;
     letter-spacing: -3px;
 }
@@ -22,26 +30,34 @@ h3{
     display: inline;
     padding: 2px;
 }
-.title{
-    display: inline;
-}
 footer{
     background-color: #763a96;
     color: #ffffff;
-    padding: 20px;;
+    position:absolute;
+    bottom: 0;
+    width: 100%;
+}
+.footer-content{
+    padding: 20px;
+    width: 80%;
+    margin: auto;
 }
 .gamepad{
-    margin-left: 10%;
-    margin-bottom: 60px
+    width: 900px;
+    padding: 20px;
+    margin-top: 100px;
+    background-color: #4237A3;
+    margin-left: auto;
+    margin-right: auto;
+}
+.gamepad h2{
+    color: #fff;
+    margin-top: 0;
+    display: inline-block;
 }
 .board{
-    border: 2px solid black;
+    width: 450px;
     background-color: #4d61e2;
-    height: 580px;
-    width: 700px;
-    padding: 20px;
-    box-shadow: -5px 2px 30px rgba(0,0,0,0.5);
-    margin-bottom: 50px;
 }
 .col{
     display: inline-block;
@@ -56,8 +72,7 @@ footer{
 nav{
     display: inline;
     float: right;
-    margin-right: 10%;
-    margin-top: -50px;
+    align-content: center;
 }
 .line{
     width: 660px;
@@ -72,29 +87,68 @@ ul{
 }
 li{
     display: inline;
-    border-radius: 100px;
-    padding: 5px;
-    font-size: 14px;
-    margin: 5px;
-    background: #763a96;
-    
 }
-li a{
-    text-decoration: none;
+li button{
+    border: none;
+    border: 5px solid purple;
+    padding: 2px;
     color: #fff;
-    
+    font-size: 20px;
+    background-color: #763a96; 
+}
+li button:hover{
+    border: none;
+    padding: 10px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 20px;
+    background-color: #766396; 
+}
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+.close{
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 .tutorial{
     background-color: #4237A3;
-    height: 400px;
-    width: 80%;
+    width: 400px;
     padding-top: 10px;
     margin: 50px auto auto auto;
 }
-.tutorial h1{
+.tutorial h2{
     color: #ffffff;
+    margin-top: 0;
     letter-spacing: normal;
-    margin-left: 10px;
+}
+.tutorial h3{
+    color:#ffffff;
+    background-color: #763a96;
+    letter-spacing: normal;
+}
+.tutorial p{
+    font-weight: bold;
+    color: #fff;
+    text-align: justify;
+}
+.tutorial-text{
+    padding: 20px;
 }
 .slot{
     background-color: #ffffff;
@@ -105,4 +159,11 @@ li a{
     border-bottom: 1px solid #ddd;
     box-shadow: inset 10px 8px 48px #ddd;
     margin: 5px;
+}
+.selected{
+    background-color: blue;
+    box-shadow: inset 2px 2px 2px;
+}
+.connected{
+    border: 5px solid red;
 }
