--- a/css/Style.css
+++ b/css/Style.css
@@ -16,6 +16,7 @@ body{
     padding-top: 80px;
     margin: 0 10% 0 10%;
     height: 600px;
+    background-color: #46b235;
     border: black 1px solid;
 }
 .bar{
@@ -67,6 +68,27 @@ h3{
     display: inline;
     padding: 2px;
 }
+.leaderBoard{
+    border: solid 1px black;
+    width: 200px;
+    height: 200px;
+    background-color: #46b235;
+    margin-top: 20px;
+    padding: 10px;
+}
+.leaderBoard h2{
+    color: #327F26;
+}
+.lb-element{
+    background-color: darkcyan;
+    display: inline-block;
+}
+.messageLog{
+    display: block;
+
+    width: 100%;
+    border: solid 1px black;
+}
 footer{
     background-color: #763a96;
     color: #ffffff;
@@ -96,14 +118,6 @@ footer{
     color: #fff;
     margin-top: 0;
     display: inline-block;
-}
-.board{
-    width: 450px;
-    background-color: #4d61e2;
-}
-.col{
-    display: inline-block;
-    width: 60px;
 }
 .logo{
     margin-left: 10%;
@@ -192,11 +206,22 @@ li button:hover{
 .tutorial-text{
     padding: 20px;
 }
+/* board */
+.boardSpace{
+    width: 20px;
+    
+    background-color: #4d61e2;
+}
+.board{
+    width: 400px;
+    height: 400px;
+    border: 2px solid black;
+}
 .slot{
     background-color: #ffffff;
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 100px;
     border-bottom: 1px solid #ddd;
     box-shadow: inset 10px 8px 48px #ddd;
