--- a/css/cards.css
+++ b/css/cards.css
@@ -7,6 +7,7 @@ color palette:
     red #C56767
     white #F4F4F4
 */
+/*sign up form*/
 .userRegistration{
   margin: 5% auto;
   width: 600px;
@@ -54,4 +55,14 @@ color palette:
 .registerForm p{
   color: #EBC476;
   font-weight: bold;
+}
+/*settings of the game*/
+.settingsContent{
+  color: #F4F4F4;
+  border: 1px solid black;
+  margin: auto;
+  background-color: #7B9DC0;
+  padding: 20px;
+  width: 300px;
+  height: 250px;
 }
