--- a/css/boardStyle.css
+++ b/css/boardStyle.css
@@ -12,7 +12,7 @@ color palette:
   margin: auto;
 }
 .board{
-    background-color: #FCFCFC;
+    background-color: #EBC476;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
